<resources>
    <string name="app_name">Inventory</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name*</string>
    <string name="amount">Amount*</string>
    <string name="ok">Ok</string>
    <string name="new_inventory_item">New item</string>
    <string name="cancel">Cancel</string>
    <string name="new_inventory_category">New category</string>
    <string name="category">Category</string>
    <string name="item">Item</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string-array name="units">
        <item> </item>
        <item>g</item>
        <item>kg</item>
        <item>dl</item>
        <item>l</item>
        <item>pcs</item>
        <item>pack</item>
        <item>box</item>
    </string-array>

    <string name="action_shopping_list">Shopping list</string>
    <string name="title_activity_shopping_list">Shopping list</string>
    <string name="unit">Unit</string>
    <string name="new_item_amount">New amount</string>
    <string name="expiry">Expiry (dd/mm/yyyy)</string>
    <string name="dark_mode_header">Dark mode</string>
    <string name="notifications_header">Notifications</string>
    <string name="expiry_summary">Receive notifications, when you have stuff, that\'s close to expiry</string>
    <string name="expiry_title">Enable expiry notifications</string>
    <string name="dark_mode_title">Dark mode</string>
    <string name="new_shopping_list_item">New item</string>
    <string name="action_delete_all">Delete all</string>
    <string name="channel_name">CHANNEL1</string>
    <string name="channel_description">Channel of inventory</string>
    <string name="notification_channel_description">Inventory app channel</string>
    <string name="action_try_notification">Try notification</string>
</resources>